--- a/Hangman/Help is on the way/task-info.yaml
+++ b/Hangman/Help is on the way/task-info.yaml
@@ -91,5 +91,5 @@ files:
         CoffeeMachineTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/375/implement
-status: Unchecked
+status: Solved
 record: -1
