--- a/Hangman/Keep trying/task-info.yaml
+++ b/Hangman/Keep trying/task-info.yaml
@@ -167,5 +167,5 @@ files:
         CoffeeMachineTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/376/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 5
