--- a/Hangman/The value of life/task-info.yaml
+++ b/Hangman/The value of life/task-info.yaml
@@ -232,5 +232,5 @@ files:
         CoffeeMachineTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/377/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 6
