--- a/Hangman/Menu, please/task-info.yaml
+++ b/Hangman/Menu, please/task-info.yaml
@@ -294,5 +294,5 @@ files:
         CoffeeMachineTest('hangman.hangman').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/69/stages/379/implement
-status: Unchecked
+status: Solved
 record: -1
